# violet-cobweb-ui

./: Cargo.toml  README.md  style.css
.github/workflows/: build.yml  build_and_publish.yml  release.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: example.rs  player.rs  recorder.rs
